# puppeteer

./: .gitignore  .hgignore  CMakeLists.txt  COPYING  LICENSE  README.md  animation_to_nodedata.py  api.lua  config.ld  model.lua  model_state.lua  plot_angles.py  plot_fitting_errors.py  subject1m.lua  subject3m.lua  subject4m.lua  testmodel.lua
CMake/: FindLua.cmake  FindRBDL.cmake
HeiMan/: HeiMan.lua  extract_markers.lua  extract_parameters.lua  matrix.lua  serialize.lua
data/: testdata.c3d
scripts/: motionsickness.lua
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: Animation.cc  Animation.h  Camera.cc  Camera.h  FrameConfig.h  GLWidget.cc  GLWidget.h  LuaTypes.h  MarkerData.cc  MarkerData.h  MarkerModel.cc  MarkerModel.h  MeshVBO.cc  MeshVBO.h  Model.cc  Model.h  ModelFitter.cc  ModelFitter.h  PuppeteerAboutDialog.h  PuppeteerApp.cc  PuppeteerApp.h  QtGLBaseApp.cc  QtGLBaseApp.h  Scene.cc  Scene.h  Scripting.cc  Scripting.h  Shader.cc  Shader.h  Transformation.h  config.h.cmake  fit_motion.cc  main.cc  objloader.cc  objloader.h  string_utils.h  timer.h
src/SimpleMath/: SimpleMathDynamic.h  SimpleMathFixed.h  SimpleMathGL.h
src/vtkChart/: chartXY.cc  chartXY.cc~  chartXY.h  chartXY.h~
src/vtkChart/simpleInterpolation/: SplineInterpolator.h
tests/: AnimationTests.cc  CMakeLists.txt  UtilsTests.cc  main.cc
ui/: MainWindow.ui  PuppeteerAboutDialog.ui  PuppeteerMainWindow.ui
