CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

# Needed for UnitTest++
LIST( APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMake )

# Perform the proper linking
SET (CMAKE_SKIP_BUILD_RPATH FALSE)
SET (CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
SET (CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
SET (CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

# The QT Interface
SET( QT_USE_QTXML TRUE )
SET( QT_USE_QTOPENGL TRUE )
SET( QT_WRAP_CPP TRUE )
FIND_PACKAGE (Qt4 REQUIRED)
FIND_PACKAGE (OpenGL)
FIND_PACKAGE (RBDL REQUIRED)
FIND_PACKAGE (Eigen3 REQUIRED)

ADD_DEFINITIONS (${QT_DEFINITIONS})

INCLUDE (${QT_USE_FILE})

SET ( MainWindow_UIS
	ui/MainWindow.ui
	)

QT4_WRAP_UI (MainWindow_UIS_H ${MainWindow_UIS})

SET ( SCENEGL_SRCS
	src/Camera.cc
	src/Scene.cc
	src/MeshVBO.cc
	src/Shader.cc
	src/MarkerModel.cc
	src/MarkerData.cc
	src/Animation.cc
	src/ModelFitter.cc
	)

SET ( QtGLBaseApp_SRCS
	src/main.cc
	src/GLWidget.cc
	src/QtGLBaseApp.cc
	glew/src/glew.c
	)

QT4_WRAP_CPP ( QtGLBaseApp_MOC_SRCS
	src/QtGLBaseApp.h
	src/GLWidget.h
	)

ADD_LIBRARY ( SceneGL STATIC
	${SCENEGL_SRCS}
	)

ADD_LIBRARY ( glew STATIC
	glew/src/glew.c
	)

ADD_EXECUTABLE ( puppeteer
	${QtGLBaseApp_SRCS}
	${QtGLBaseApp_MOC_SRCS}
	${MainWindow_UIS_H}
)

ADD_EXECUTABLE ( fit_motion
	src/fit_motion.cc
	)

INCLUDE_DIRECTORIES (
	${QT_INCLUDE_DIR}
	glew/include
	)

SET ( BUILD_SOURCE_DIRECTORY ${CMAKE_SOURCE_DIR} )
SET ( BUILD_INSTALL_DIRECTORY ${CMAKE_INSTALL_PREFIX} )
CONFIGURE_FILE( ${CMAKE_SOURCE_DIR}/src/config.h.cmake ${CMAKE_SOURCE_DIR}/src/config.h )

INCLUDE_DIRECTORIES (${QT_INCLUDE_DIR}/QtOpenGL)
INCLUDE_DIRECTORIES (${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR}/vendor/QtPropertyBrowser/src)
INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR}/vendor/c3dfile/src)
INCLUDE_DIRECTORIES ( include )
INCLUDE_DIRECTORIES (${RBDL_INCLUDE_DIR})
INCLUDE_DIRECTORIES (${EIGEN3_INCLUDE_DIR})

SET_TARGET_PROPERTIES ( ${PROJECT_EXECUTABLES} PROPERTIES
	LINKER_LANGUAGE CXX
	INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib" 
)

SUBDIRS (
	tests
	vendor/QtPropertyBrowser
	vendor/c3dfile
	)

TARGET_LINK_LIBRARIES ( SceneGL
	glew
	${OPENGL_LIBRARIES}
	${RBDL_LIBRARY}
	${RBDL_LUAMODEL_LIBRARY}
	c3dfile
	)

TARGET_LINK_LIBRARIES ( puppeteer
	SceneGL
	${QT_LIBRARIES}
	QtPropertyBrowser
	${OPENGL_LIBRARIES}
)

TARGET_LINK_LIBRARIES ( fit_motion
	SceneGL
	)

# Installation
INSTALL (TARGETS puppeteer fit_motion
RUNTIME DESTINATION bin
LIBRARY DESTINATION lib
)

# Packaging
SET(CPACK_GENERATOR "DEB")
SET(CPACK_DEBIAN_PACKAGE_SECTION "science")
SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Martin Felis <martin.felis@iwr.uni-heidelberg.de>")
SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libqt4-opengl (>= 4:4.8), libglu1-mesa
(>=8.0), rbdl (> 2:2.2)")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Puppeteer - Motion Capture Mapping Tool")
SET(CPACK_PACKAGE_VENDOR "Martin Felis")
SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
SET(CPACK_PACKAGE_VERSION_MAJOR ${MESHUP_VERSION_MAJOR})
SET(CPACK_PACKAGE_VERSION_MINOR ${MESHUP_VERSION_MINOR})
SET(CPACK_PACKAGE_VERSION_PATCH ${MESHUP_VERSION_PATCH})
SET(CPACK_PACKAGE_INSTALL_DIRECTORY "CPACK_PACKAGE ${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}")
SET(CPACK_PACKAGE_FILE_NAME "MeshUp-${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
IF(UNIX)
	SET(CPACK_STRIP_FILES "bin/puppeteer")
  SET(CPACK_SOURCE_STRIP_FILES "")
ENDIF(UNIX)
SET(CPACK_PACKAGE_EXECUTABLES "puppeteer;Puppeteer")

INCLUDE(CPack)
